# jptext

./: .gitattributes  .gitignore  README.txt  pyproject.toml  pytest.ini  setup.cfg  tox.ini
data/: JMdict.xml  kanjidic2.xml  tanaka_corpus.txt
jptext/: __init__.py  charset.py  conj.py  furigana.py  jmdict.py  kanjidic.py  romaji.py
tests/: test_base_package.py
