[tool.poetry]
name = "jptext"
version = "0.1.0"
description = ""
authors = ["Alex Stewart <foogod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7"
tox = "^3.14"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.black]
line-length = 119
target_version = ['py37']
exclude = '/((\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.direnv|_build|buck-out|build|dist)/|(jptext/_.*\.py))'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
